web/app/themes/ppj/src/sass/components/leg-specific-nav.sass
.leg-specific-nav
  @extend .l-full
  display: flex
  justify-content: space-between
  margin-bottom: 0
  margin-top: 0
  opacity: 1
  padding: $common-spacing

  @include bp('portrait')
    align-items: center

  .leg &
    left: 0
    position: absolute
    right: 0
    z-index: 3

  .page-template-find-a-job &
    position: relative

  @include bp('landscape')
    margin: 0 auto
    max-width: 128.4rem
    padding: $common-spacing * 2

  &__logo
    @extend .u-wireframe-image
    @include background-img('svg/logo.svg')
    background-color: $color-transparent
    background-repeat: no-repeat
    background-position: center center
    background-size: contain
    display: block
    flex: 0 0 9.4rem
    width: 9.4rem // 2.35 ratio
    pointer-events: auto

    .youth-custody &
      @include background-img('svg/ycs_logo.svg')

    @include bp('portrait')
      flex: 0 0 15rem
      height: 6.4rem

    @include bp('landscape')
      width: 14%

  &__menu
    background: $color-dark-transparent
    color: $color-white
    display: none

    @include bp('landscape')
      background-color: $color-transparent
      display: block
      margin-left: auto
      width: 86%

  &__menu-list
    margin-top: 8rem

    @include bp('landscape')
      display: flex
      justify-content: flex-end
      margin-top: 0
      padding-bottom: $common-spacing * 2

  &__menu-list-element
    $nmle: &
    font-size: 1.8rem
    font-weight: $font-weight-semi-bold
    padding: 0 $common-spacing

    &--selected

      #{$nmle}-text:after
        opacity: 1

      &:after
        @include bp('landscape')
          border-bottom-color: $color-light

    &:hover
      #{$nmle}-text:after
        opacity: 1

    @include bp('landscape')
      border: none
      border-left: .1rem solid $color-light
      font-size: 1.6rem
      height: 2rem
      line-height: 1
      margin-left: $common-spacing
      padding: 0

    @include bp('large')
      font-size: 2rem

    &-text
      @extend .underlined-link
      display: inline-block
      text-align: center

    & > a
      border-bottom: 1px solid $color-white
      color: $color-white
      display: block
      padding: $common-spacing/1.5 0
      width: 100%

      @include bp('landscape')
        border: none
        margin-left: $common-spacing
        padding: 0
        padding-bottom: $common-spacing * .4
        text-transform: uppercase
        width: inherit

        &:after
          transition: border-bottom-color $main-transition-duration

      &[href='']
        color: $color-light
        pointer-events: none
        cursor: default

    &:first-child

      @include bp('landscape')
        border-left: 0

      & > a
        border-top: 1px solid $color-white

        @include bp('landscape')
          border-top: 0

    &-subtext
      font-weight: $font-weight-normal

